Able to get list of vehicles and individual vehicle
